Update experiment with new content

--- a/examples/experiment.ipynb
+++ b/examples/experiment.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -51,6 +51,7 @@
    "source": [
     "# Modify these variables according to your needs.\n",
     "application_name = \"Distributed Keras Experimentation\"\n",
+    "master = \"local[*]\"\n",
     "using_spark_2 = False\n",
     "num_cores = 3\n",
     "num_executors = 1"
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -93,30 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Java gateway process exited before sending the driver its port number",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-19122e878189>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mconf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSparkConf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"spark.master\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"spark://127.0.0.1:7077\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"spark.serializer\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"org.apache.spark.serializer.KyroSerializer\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"spark.executor.cores\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m`\u001b[0m\u001b[0mnum_cores\u001b[0m\u001b[0;34m`\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mconf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"spark.executor.instances\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m`\u001b[0m\u001b[0mnum_executors\u001b[0m\u001b[0;34m`\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/apache-spark/python/pyspark/conf.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, loadDefaults, _jvm, _jconf)\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m             \u001b[0;32mfrom\u001b[0m \u001b[0mpyspark\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontext\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 104\u001b[0;31m             \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ensure_initialized\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    105\u001b[0m             \u001b[0m_jvm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_jvm\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jvm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jconf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_jvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSparkConf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloadDefaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/apache-spark/python/pyspark/context.py\u001b[0m in \u001b[0;36m_ensure_initialized\u001b[0;34m(cls, instance, gateway)\u001b[0m\n\u001b[1;32m    243\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_lock\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_gateway\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 245\u001b[0;31m                 \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_gateway\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgateway\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mlaunch_gateway\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    246\u001b[0m                 \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_jvm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSparkContext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_gateway\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjvm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    247\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/apache-spark/python/pyspark/java_gateway.py\u001b[0m in \u001b[0;36mlaunch_gateway\u001b[0;34m()\u001b[0m\n\u001b[1;32m     92\u001b[0m                 \u001b[0mcallback_socket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mgateway_port\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Java gateway process exited before sending the driver its port number\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m         \u001b[0;31m# In Windows, ensure the Java child processes do not linger after Python has exited.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: Java gateway process exited before sending the driver its port number"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "conf = SparkConf()\n",
-    "conf.set(\"spark.master\", \"spark://127.0.0.1:7077\")\n",
-    "conf.set(\"spark.serializer\", \"org.apache.spark.serializer.KyroSerializer\")\n",
+    "conf.set(\"spark.master\", master)\n",
     "conf.set(\"spark.executor.cores\", `num_cores`)\n",
     "conf.set(\"spark.executor.instances\", `num_executors`)\n",
     "\n",
@@ -135,11 +120,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
+   "source": [
+    "# Check if we are using Spark 2.0\n",
+    "if using_spark_2:\n",
+    "    reader = sc\n",
+    "else:\n",
+    "    reader = sqlContext\n",
+    "# Read the dataset.\n",
+    "raw_dataset = reader.read.format('com.databricks.spark.csv') \\\n",
+    "                    .options(header='true', inferSchema='true').load(\"data/atlas_higgs.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- EventId: integer (nullable = true)\n",
+      " |-- DER_mass_MMC: double (nullable = true)\n",
+      " |-- DER_mass_transverse_met_lep: double (nullable = true)\n",
+      " |-- DER_mass_vis: double (nullable = true)\n",
+      " |-- DER_pt_h: double (nullable = true)\n",
+      " |-- DER_deltaeta_jet_jet: double (nullable = true)\n",
+      " |-- DER_mass_jet_jet: double (nullable = true)\n",
+      " |-- DER_prodeta_jet_jet: double (nullable = true)\n",
+      " |-- DER_deltar_tau_lep: double (nullable = true)\n",
+      " |-- DER_pt_tot: double (nullable = true)\n",
+      " |-- DER_sum_pt: double (nullable = true)\n",
+      " |-- DER_pt_ratio_lep_tau: double (nullable = true)\n",
+      " |-- DER_met_phi_centrality: double (nullable = true)\n",
+      " |-- DER_lep_eta_centrality: double (nullable = true)\n",
+      " |-- PRI_tau_pt: double (nullable = true)\n",
+      " |-- PRI_tau_eta: double (nullable = true)\n",
+      " |-- PRI_tau_phi: double (nullable = true)\n",
+      " |-- PRI_lep_pt: double (nullable = true)\n",
+      " |-- PRI_lep_eta: double (nullable = true)\n",
+      " |-- PRI_lep_phi: double (nullable = true)\n",
+      " |-- PRI_met: double (nullable = true)\n",
+      " |-- PRI_met_phi: double (nullable = true)\n",
+      " |-- PRI_met_sumet: double (nullable = true)\n",
+      " |-- PRI_jet_num: integer (nullable = true)\n",
+      " |-- PRI_jet_leading_pt: double (nullable = true)\n",
+      " |-- PRI_jet_leading_eta: double (nullable = true)\n",
+      " |-- PRI_jet_leading_phi: double (nullable = true)\n",
+      " |-- PRI_jet_subleading_pt: double (nullable = true)\n",
+      " |-- PRI_jet_subleading_eta: double (nullable = true)\n",
+      " |-- PRI_jet_subleading_phi: double (nullable = true)\n",
+      " |-- PRI_jet_all_pt: double (nullable = true)\n",
+      " |-- Weight: double (nullable = true)\n",
+      " |-- Label: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Double-check the inferred schema.\n",
+    "raw_dataset.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since Spark's MLlib has some nice features for some distributed dataprocessing, we follow MLlib (dataframe) API in order to ensure compatibility. What it basically boils down to, is that all the features (which can have different type) will be aggregated into a single column. More information on Spark MLlib (and other APIs) can be found here: [http://spark.apache.org/docs/latest/ml-guide.html](http://spark.apache.org/docs/latest/ml-guide.html)\n",
+    "\n",
+    "In the following steps we will show you how to extract the desired columns from the dataset and prepare the for further processing."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# First, we would like to extract the desired features from the raw dataset.\n",
+    "# We do this by constructing a list with all desired columns.\n",
+    "features = dataset.columns\n",
+    "features.remove('EventId')\n",
+    "features.remove('Weight')\n",
+    "features.remove('Label')\n",
+    "# Next, we use Spark's VectorAssembler to \"assemble\" (create) a vector of all desired features.\n",
+    "# http://spark.apache.org/docs/latest/ml-features.html#vectorassembler\n",
+    "vector_assembler = VectorAssembler(inputCols=features, outputCol=\"features\")\n",
+    "# This transformer will take all columns specified in features, and create an additional column \"features\"\n",
+    "# which will contain all the desired features aggregated into a single vector.\n",
+    "dataset = vector_assembler.transform(raw_dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
