Add additional content for the experiment

--- a/examples/experiment.ipynb
+++ b/examples/experiment.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -194,6 +194,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Dataset preprocessing and normalization\n",
+    "\n",
     "Since Spark's MLlib has some nice features for some distributed dataprocessing, we follow MLlib (dataframe) API in order to ensure compatibility. What it basically boils down to, is that all the features (which can have different type) will be aggregated into a single column. More information on Spark MLlib (and other APIs) can be found here: [http://spark.apache.org/docs/latest/ml-guide.html](http://spark.apache.org/docs/latest/ml-guide.html)\n",
     "\n",
     "In the following steps we will show you how to extract the desired columns from the dataset and prepare the for further processing."
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +211,7 @@
    "source": [
     "# First, we would like to extract the desired features from the raw dataset.\n",
     "# We do this by constructing a list with all desired columns.\n",
-    "features = dataset.columns\n",
+    "features = raw_dataset.columns\n",
     "features.remove('EventId')\n",
     "features.remove('Weight')\n",
     "features.remove('Label')\n",
@@ -222,9 +224,182 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Apply feature normalization with standard scaling. This will transform a feature to have mean 0, and std 1.\n",
+    "# http://spark.apache.org/docs/latest/ml-features.html#standardscaler\n",
+    "standard_scaler = StandardScaler(inputCol=\"features\", outputCol=\"features_normalized\", withStd=True, withMean=True)\n",
+    "standard_scaler_model = standard_scaler.fit(dataset)\n",
+    "dataset = standard_scaler_model.transform(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# If we look at the dataset, the Label column consists of 2 entries, i.e., b (background), and s (signal).\n",
+    "# Our neural network will not be able to handle these characters, so instead, we convert it to an index\n",
+    "# so we can indicate that output neuron with index 0 is background, and 1 is signal.\n",
+    "# http://spark.apache.org/docs/latest/ml-features.html#stringindexer\n",
+    "label_indexer = StringIndexer(inputCol=\"Label\", outputCol=\"label_index\").fit(dataset)\n",
+    "dataset = label_indexer.transform(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define some properties of the neural network for later use.\n",
+    "nb_classes = 2 # Number of output classes (signal and background)\n",
+    "nb_features = len(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# We observe that Keras is not able to work with these indexes. What it actually\n",
+    "# expects is a vector with an identical size to the output layer. Our framework provides\n",
+    "# functionality to do this with ease. What it basically does, given an expected vector dimension,\n",
+    "# it prepares zero vector with the specified dimensionality, and will set the neuron with a specific\n",
+    "# label index to one.\n",
+    "\n",
+    "# For example:\n",
+    "# 1. Assume we have a label index: 3\n",
+    "# 2. Output dimensionality: 5\n",
+    "# With these parameters, we obtain the following vector in the DataFrame column: [0,0,0,1,0]\n",
+    "\n",
+    "label_vector_transformer = LabelVectorTransformer(output_dim=nb_classes)\n",
+    "dataset = label_vector_transformer.transform(dataset).toDF()\n",
+    "dataset = dataset.select(\"features_normalized\", \"label_index\", \"label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Finally, we create a trainingset and a testset.\n",
+    "(trainingSet, testSet) = dataset.randomSplit([0.7, 0.3])\n",
+    "trainingSet.cache()\n",
+    "testSet.cache()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Model construction\n",
+    "\n",
+    "We will now construct a relatively simple Keras model (without any modifications) which, hopefully, will be able to classify the dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model = Sequential()\n",
+    "model.add(Dense(600, input_shape=(nb_features,)))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dropout(0.2))\n",
+    "model.add(Dense(600))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Dense(nb_classes))\n",
+    "model.add(Activation('softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Summarize the model.\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "\n",
+    "In the following cells we will train and evaluate the model using different distributed trainers, however, we will as well provide a baseline metric using a **SingleTrainer**, which is basically an instance of the Adagrad optimizer running on Spark."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SingleTrainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "single_trainer = SingleTrainer(keras_model=model, features_col=\"features_normalized\", batch_size=10000)\n",
+    "trained_model = single_trainer.train(trainingSet)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EASGD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Asynchronous EASGD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DOWNPOUR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusions"
+   ]
   }
  ],
  "metadata": {
