Add aditional content to Jupyter notebook

--- a/examples/experiment.ipynb
+++ b/examples/experiment.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -287,18 +287,30 @@
     "# 2. Output dimensionality: 5\n",
     "# With these parameters, we obtain the following vector in the DataFrame column: [0,0,0,1,0]\n",
     "\n",
-    "label_vector_transformer = LabelVectorTransformer(output_dim=nb_classes)\n",
+    "label_vector_transformer = LabelVectorTransformer(output_dim=nb_classes, input_col=\"label_index\", output_col=\"label\")\n",
     "dataset = label_vector_transformer.transform(dataset).toDF()\n",
+    "# Only select the columns we need (less data shuffling) while training.\n",
     "dataset = dataset.select(\"features_normalized\", \"label_index\", \"label\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[features_normalized: vector, label_index: double, label: vector]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Finally, we create a trainingset and a testset.\n",
     "(trainingSet, testSet) = dataset.randomSplit([0.7, 0.3])\n",
@@ -317,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -335,11 +347,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "____________________________________________________________________________________________________\n",
+      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
+      "====================================================================================================\n",
+      "dense_1 (Dense)                  (None, 600)           18600       dense_input_1[0][0]              \n",
+      "____________________________________________________________________________________________________\n",
+      "activation_1 (Activation)        (None, 600)           0           dense_1[0][0]                    \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_1 (Dropout)              (None, 600)           0           activation_1[0][0]               \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_2 (Dense)                  (None, 600)           360600      dropout_1[0][0]                  \n",
+      "____________________________________________________________________________________________________\n",
+      "activation_2 (Activation)        (None, 600)           0           dense_2[0][0]                    \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_3 (Dense)                  (None, 2)             1202        activation_2[0][0]               \n",
+      "____________________________________________________________________________________________________\n",
+      "activation_3 (Activation)        (None, 2)             0           dense_3[0][0]                    \n",
+      "====================================================================================================\n",
+      "Total params: 380402\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "# Summarize the model.\n",
     "model.summary()"
@@ -351,7 +389,65 @@
    "source": [
     "## Training\n",
     "\n",
-    "In the following cells we will train and evaluate the model using different distributed trainers, however, we will as well provide a baseline metric using a **SingleTrainer**, which is basically an instance of the Adagrad optimizer running on Spark."
+    "In the following cells we will train and evaluate the model using different distributed trainers, however, we will as well provide a baseline metric using a **SingleTrainer**, which is basically an instance of the Adagrad optimizer running on Spark.\n",
+    "\n",
+    "Furthermore, we will also evaluate every training using Spark's MulticlassClassificationEvaluator [https://spark.apache.org/docs/latest/api/python/pyspark.ml.html#pyspark.ml.evaluation.MulticlassClassificationEvaluator](https://spark.apache.org/docs/latest/api/python/pyspark.ml.html#pyspark.ml.evaluation.MulticlassClassificationEvaluator)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluator\n",
+    "\n",
+    "We will evaluate all algorithms using the F1 [https://en.wikipedia.org/wiki/F1_score](https://en.wikipedia.org/wiki/F1_score)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "evaluator = MulticlassClassificationEvaluator(metricName=\"f1\", predictionCol=\"predicted_index\", labelCol=\"label_index\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, before we can evaluate the prediction, we will also need to converted the neural network prediction, which is a vector which has the same dimensionality as the output layer, to a label index. This is shown in the cell below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "index_transformer = LabelIndexTransformer(output_dim=nb_classes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will also have to keep track of the evaluated models."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "results = {}"
    ]
   },
   {
@@ -363,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -371,6 +467,24 @@
    "source": [
     "single_trainer = SingleTrainer(keras_model=model, features_col=\"features_normalized\", batch_size=10000)\n",
     "trained_model = single_trainer.train(trainingSet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Clear the prediction column from the testset.\n",
+    "testSet = testSet.select(\"features_normalized\", \"label_index\", \"label\")\n",
+    "# Apply a prediction from a trained model.\n",
+    "predictor = ModelPredictor(keras_model=trained_model, features_col=\"features_normalized\")\n",
+    "# Transform the prediction vector to an indexed label.\n",
+    "testSet = index_transformer.transform(testSet).toDF()\n",
+    "# Store the F1 score of the SingleTrainer.\n",
+    "results['single_trainer'] = evaluator.evaluate(testSet)"
    ]
   },
   {
