--- a/examples/experiment.ipynb
+++ b/examples/experiment.ipynb
@@ -57,7 +57,7 @@
     "application_name = \"Distributed Keras Experimentation\"\n",
     "master = \"yarn-client\" # Set to \"yarn-client\" if you are using YARN.\n",
     "using_spark_2 = False\n",
-    "yarn = \"p01001532965510.cern.ch:8088\" # Address:port of ResourceManager\n",
+    "yarn = \"YARN HOST:8088\" # Address:port of ResourceManager\n",
     "# Specify number of cores and number of executors manually if\n",
     "# you are not using YARN.\n",
     "if not yarn:\n",
