Remove outdated examples

--- a/examples/workflow.ipynb
+++ b/examples/workflow.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -23,6 +23,7 @@
     "\n",
     "import requests\n",
     "\n",
+    "from keras.optimizers import *\n",
     "from keras.models import Sequential\n",
     "from keras.layers.core import Dense, Dropout, Activation\n",
     "\n",
@@ -39,23 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Modify these variables according to your needs.\n",
     "application_name = \"Distributed Keras Experimentation\"\n",
-    "master = \"yarn-client\" # Set to \"yarn-client\" if you are using YARN.\n",
     "using_spark_2 = False\n",
-    "yarn = \"p01001532965510.cern.ch:8088\" # Address:port of ResourceManager\n",
-    "# Specify number of cores and number of executors manually if\n",
-    "# you are not using YARN.\n",
+    "yarn = None # Address:port of ResourceManager\n",
     "if not yarn:\n",
+    "    # Tell master to use local resources.\n",
+    "    master = \"local[*]\"\n",
     "    num_cores = 3\n",
     "    num_executors = 1\n",
     "else:\n",
+    "    # Tell master to use YARN.\n",
+    "    master = \"yarn-client\"\n",
     "    # Otherwise set the number of maximum executors and\n",
     "    # cores per executor.\n",
     "    max_num_executors = 20\n",
@@ -64,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -168,11 +170,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- EventId: integer (nullable = true)\n",
+      " |-- DER_mass_MMC: double (nullable = true)\n",
+      " |-- DER_mass_transverse_met_lep: double (nullable = true)\n",
+      " |-- DER_mass_vis: double (nullable = true)\n",
+      " |-- DER_pt_h: double (nullable = true)\n",
+      " |-- DER_deltaeta_jet_jet: double (nullable = true)\n",
+      " |-- DER_mass_jet_jet: double (nullable = true)\n",
+      " |-- DER_prodeta_jet_jet: double (nullable = true)\n",
+      " |-- DER_deltar_tau_lep: double (nullable = true)\n",
+      " |-- DER_pt_tot: double (nullable = true)\n",
+      " |-- DER_sum_pt: double (nullable = true)\n",
+      " |-- DER_pt_ratio_lep_tau: double (nullable = true)\n",
+      " |-- DER_met_phi_centrality: double (nullable = true)\n",
+      " |-- DER_lep_eta_centrality: double (nullable = true)\n",
+      " |-- PRI_tau_pt: double (nullable = true)\n",
+      " |-- PRI_tau_eta: double (nullable = true)\n",
+      " |-- PRI_tau_phi: double (nullable = true)\n",
+      " |-- PRI_lep_pt: double (nullable = true)\n",
+      " |-- PRI_lep_eta: double (nullable = true)\n",
+      " |-- PRI_lep_phi: double (nullable = true)\n",
+      " |-- PRI_met: double (nullable = true)\n",
+      " |-- PRI_met_phi: double (nullable = true)\n",
+      " |-- PRI_met_sumet: double (nullable = true)\n",
+      " |-- PRI_jet_num: integer (nullable = true)\n",
+      " |-- PRI_jet_leading_pt: double (nullable = true)\n",
+      " |-- PRI_jet_leading_eta: double (nullable = true)\n",
+      " |-- PRI_jet_leading_phi: double (nullable = true)\n",
+      " |-- PRI_jet_subleading_pt: double (nullable = true)\n",
+      " |-- PRI_jet_subleading_eta: double (nullable = true)\n",
+      " |-- PRI_jet_subleading_phi: double (nullable = true)\n",
+      " |-- PRI_jet_all_pt: double (nullable = true)\n",
+      " |-- Weight: double (nullable = true)\n",
+      " |-- Label: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Double-check the inferred schema.\n",
     "raw_dataset.printSchema()"
@@ -191,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -257,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -283,11 +327,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[features_normalized: vector, label_index: double, label: vector]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Finally, we create a trainingset and a testset.\n",
     "(trainingSet, testSet) = dataset.randomSplit([0.7, 0.3])\n",
@@ -306,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -324,14 +379,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "____________________________________________________________________________________________________\n",
+      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
+      "====================================================================================================\n",
+      "dense_1 (Dense)                  (None, 600)           18600       dense_input_1[0][0]              \n",
+      "____________________________________________________________________________________________________\n",
+      "activation_1 (Activation)        (None, 600)           0           dense_1[0][0]                    \n",
+      "____________________________________________________________________________________________________\n",
+      "dropout_1 (Dropout)              (None, 600)           0           activation_1[0][0]               \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_2 (Dense)                  (None, 600)           360600      dropout_1[0][0]                  \n",
+      "____________________________________________________________________________________________________\n",
+      "activation_2 (Activation)        (None, 600)           0           dense_2[0][0]                    \n",
+      "____________________________________________________________________________________________________\n",
+      "dense_3 (Dense)                  (None, 2)             1202        activation_2[0][0]               \n",
+      "____________________________________________________________________________________________________\n",
+      "activation_3 (Activation)        (None, 2)             0           dense_3[0][0]                    \n",
+      "====================================================================================================\n",
+      "Total params: 380402\n",
+      "____________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Summarize the model.\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Worker Optimizer and Loss\n",
+    "\n",
+    "In order to evaluate the gradient on the model replicas, we have to specify an optimizer and a loss method. For this, we just follow the Keras API as defined in the documentation: [https://keras.io/optimizers/](https://keras.io/optimizers/) and [https://keras.io/objectives/](https://keras.io/objectives/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Summarize the model.\n",
-    "model.summary()"
+    "optimizer = RMSprop()\n",
+    "loss = 'categorical_crossentropy'"
    ]
   },
   {
@@ -356,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -368,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -417,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -429,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +557,8 @@
    "outputs": [],
    "source": [
     "time_start = time.time()\n",
-    "single_trainer = SingleTrainer(keras_model=model, features_col=\"features_normalized\", batch_size=1000)\n",
+    "single_trainer = SingleTrainer(keras_model=model, loss=loss, worker_optimizer=optimizer, \n",
+    "                               features_col=\"features_normalized\", batch_size=1000)\n",
     "trained_model = single_trainer.train(trainingSet)\n",
     "dt = time.time() - time_start\n",
     "time_spent['single_trainer'] = dt\n",
@@ -694,7 +797,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
