--- a/examples/workflow.ipynb
+++ b/examples/workflow.ipynb
@@ -163,7 +163,7 @@
     "# Modify these variables according to your needs.\n",
     "application_name = \"Distributed Keras Notebook\"\n",
     "using_spark_2 = False\n",
-    "yarn = \"p01001532067275.cern.ch:8088\" # Address:port of ResourceManager\n",
+    "yarn = \"yarn_host:8088\" # Address:port of ResourceManager\n",
     "if not yarn:\n",
     "    # Tell master to use local resources.\n",
     "    master = \"local[*]\"\n",
